support chaining of arrow-flight-module with other read modules which support the arrow-flight interface. Also: add FilterAction and AgeFilterAction transformations to the read capabilities
Signed-off-by: Doron Chen <cdoron@il.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -28,9 +28,13 @@ spec:
         - source:
             protocol: s3
             dataformat: csv
+        - source:
+            protocol: fybrik-arrow-flight
       actions:
         - name: RedactAction
         - name: RemoveAction
+        - name: FilterAction
+        - name: AgeFilterAction
     - capability: write
       scope: workload
       api:
