--- a/Pipfile
+++ b/Pipfile
@@ -3,10 +3,6 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[[source]]
-name = "testpypi"
-url = "https://test.pypi.org/simple"
-verify_ssl = true
 
 [scripts]
 server = "python main.py"
@@ -26,7 +22,7 @@ aiohttp = "==3.7.4"
 pyyaml = "==5.4.1"
 faker = "==13.3.0"
 fybrik_python_logging = "==0.1.0"
-fybrik_python_vault = {version="0.1.0", index="testpypi"}
+fybrik_python_vault = "==0.1.0"
 
 [requires]
 python_version = "3.8"
