--- a/sample/sample.yaml
+++ b/sample/sample.yaml
@@ -35,7 +35,7 @@ data:
       - action: "Redact"
         description: "redact stuff"
         columns:
-          - Email
+          - Date of Birth
         options:
           redactValue: "XXXXX"
   - name: "nyc-taxi.parquet"
