--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ aiohttp = "==3.7.4"
 pyyaml = "==5.4.1"
 faker = "==13.3.0"
 fybrik_python_logging = "==0.1.0"
+fybrik_python_vault = "==0.1.0"
 
 [requires]
 python_version = "3.8"
