--- a/helm/afm/values.sample.yaml
+++ b/helm/afm/values.sample.yaml
@@ -1,5 +1,5 @@
 # Try it with `helm install --generate-name --dry-run -f helm/afm/values.sample.yaml helm/afm`
-labels:
+metadata:
   name: 012d42539692bba841a7
   namespace: default
 uuid: 12345678
