--- a/helm/afm/values.sample.yaml
+++ b/helm/afm/values.sample.yaml
@@ -1,7 +1,6 @@
 # Try it with `helm install --generate-name --dry-run -f helm/afm/values.sample.yaml helm/afm`
-metadata:
-  name: 012d42539692bba841a7
-  namespace: default
+labels:
+  app.fybrik.io/app-name: fybrik-flight-read
 uuid: 12345678
 assets:
 - args:
