Change readOnlyRootFilesystem to false in values.yaml

--- a/helm/afm/values.yaml
+++ b/helm/afm/values.yaml
@@ -41,7 +41,7 @@ podSecurityContext:
 # Container Security Context.
 # ref: https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#security-context-1
 containerSecurityContext:
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
   privileged: false
   allowPrivilegeEscalation: false
   capabilities:
