--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,6 +9,8 @@ env:
   DOCKER_HOSTNAME: ghcr.io
   DOCKER_NAMESPACE: fybrik 
   DOCKER_USERNAME: ${{ github.actor }}
+  AWS_PAGER: ""
+  AWS_EC2_METADATA_DISABLED: true
 
 jobs:
   build:
@@ -21,10 +23,6 @@ jobs:
       certManagerVersion: '1.6.2'
     steps:
     - uses: actions/checkout@v3
-    - name: Install Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: ${{ env.GO_VERSION }}
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
