Fix test script. (#178)
* Fix test script.
* fix module tags.
* Add print stmt.
* Install AWS cli in pull-request.yml workflow.
* Install go in .github/workflows/pull-request.yml
* Add env vars to .github/workflows/pull-request.yml
* Remove options from .github/workflows/test-module.yaml

Signed-off-by: Revital Sur <eres@il.ibm.com>

--- a/.github/workflows/test-module.yaml
+++ b/.github/workflows/test-module.yaml
@@ -5,12 +5,18 @@ on:
       kind-version:
         required: true
         default: 'kind19'
+        type: choice
+        options:
+        - kind19
+        - kind20
+        - kind21
+        - kind22
       fybrik-version:
         required: true
-        default: '0.6.0'
+        default: '0.7.0'
       module-version:
         required: true
-        default: '0.6.0'
+        default: '0.7.0'
       cert-manager-version:
         required: true
         default: '1.6.2'
@@ -37,5 +43,5 @@ jobs:
         version: 2     # default
         verbose: false # default
     - name: run-test
-      run: pushd hack && ./test_module.sh ${{ github.event.inputs.kind-version }} ${{ github.event.inputs.fybrik-version }} ${{ github.event.inputs.module-version }} ${{ github.event.inputs.module-type }} ${{ github.event.inputs.cert-manager-version }}
+      run: pushd hack && ./test_module.sh ${{ github.event.inputs.kind-version }} ${{ github.event.inputs.fybrik-version }} ${{ github.event.inputs.module-version }} ${{ github.event.inputs.cert-manager-version }}
 
