--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -9,12 +9,18 @@ env:
   DOCKER_HOSTNAME: ghcr.io
   DOCKER_NAMESPACE: fybrik 
   DOCKER_USERNAME: ${{ github.actor }}
+  AWS_PAGER: ""
+  AWS_EC2_METADATA_DISABLED: true
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-
+    env:
+      kubectlVersion: 'kind20'
+      fybrikVersion: 'master'
+      moduleVersion: 'master'
+      certManagerVersion: '1.6.2'
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
@@ -26,6 +32,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
         pip install pipenv
-    - name: Build docker image 
+    - name: Install tools
+      run: make install-tools
+    - name: Install AWS cli
+      uses: unfor19/install-aws-cli-action@v1
+      with:
+        version: 2     # default
+        verbose: false # default
+    - name: run-test
+      run: pushd hack && ./test_module.sh $kubectlVersion $fybrikVersion $moduleVersion $certManagerVersion
+    - name: Build docker image
       run: make build
-
