--- a/.github/workflows/test-module.yaml
+++ b/.github/workflows/test-module.yaml
@@ -11,12 +11,14 @@ on:
         - kind20
         - kind21
         - kind22
+        - kind23
+        - kind24
       fybrik-version:
         required: true
-        default: '0.7.0'
+        default: '1.0.1'
       module-version:
         required: true
-        default: '0.7.0'
+        default: '0.8.0'
       cert-manager-version:
         required: true
         default: '1.6.2'
