--- a/helm/afm/values.yaml
+++ b/helm/afm/values.yaml
@@ -10,6 +10,9 @@ image:
   pullPolicy: Always
   pullSecret: null
 
+# Set the size limit of the data directory.
+dataDirSizeLimit: 200Mi
+
 nameOverride: ""
 fullnameOverride: ""
 
@@ -52,4 +55,25 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+tls:
+  # Relavent if TLS is used between vault and the module.
+  # MinVersion contains the minimum TLS version that is acceptable.
+  # If not provided, the system default value is used.
+  # Possible values are SSL-3, TLS-1, TLS-1.1, TLS-1.2 and TLS-1.3.
+  # ref: https://docs.python.org/3/library/ssl.html#ssl.TLSVersion.MINIMUM_SUPPORTED
+  minVersion: TLS-1.3
+  certs:
+    # Name of kubernetes secret that holds the module certificate.
+    # The secret should be of `kubernetes.io/tls` type.
+    # certSecretName: "test-tls-module-certs"
+    certSecretName: ""
+    # Name of kubernetes secret that holds the certificate authority (CA) certificates
+    # which are used by the module to validate the connection to vault.
+    # The CA certificates key in the secret should have `.crt` suffix.
+    # The provided certificates replaces the certificates in the system CA certificate store.
+    # If the secret is not provided then the CA certificates are taken from the system
+    # CA certificate store, for example `/etc/ssl/certs/`.
+    # cacertSecretName: "test-tls-ca-certs"
+    cacertSecretName: ""
 
