Add region to configMap and use access_token if exists.
Signed-off-by: Revital Sur <eres@il.ibm.com>

--- a/helm/afm/files/conf.yaml
+++ b/helm/afm/files/conf.yaml
@@ -22,6 +22,9 @@ data:
       type: s3
       s3:
         endpoint_url: {{if not (contains "://" .connection.s3.endpoint)}}https://{{end}}{{ .connection.s3.endpoint }}
+        {{- if index . "connection" "s3" "region" }}
+        region: {{ .connection.s3.region }}
+        {{- end }}
         {{- range $k, $v := .vault }}
         {{- if or (eq $k "read") (eq $k "write") }}
         vault_credentials:
